[package]
name = "pynnrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pynnrs"
crate-type = ["cdylib"]

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
pyo3 = "0.19.0"
rand = "0.8.5"
